Add endpoint to rescrap all publications
